Concat adapter tutorial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MergeAdapterRecyclerViewTutorial</string>
+    <string name="app_name">Programming Languages</string>
     <string name="got_it">Entendi</string>
 </resources>
